@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2025-06-08T01:03:42Z",
+  "timestamp" : "2025-06-16T01:00:43Z",
   "count_outdated" : 255,
   "uniques_outdated" : 189,
-  "count" : 257,
-  "uniques" : 190,
+  "count" : 258,
+  "uniques" : 191,
   "clones" : [
     {
       "timestamp": "2025-06-06T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
